# SALTy-rn

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Makefile  PIPELINE_WALKTHROUGH.md  README.md  list_folders_to_csv.py  prompt.txt  pyproject.toml  test_symbolic.cpp  test_xnn_symbolic.cpp  test_xnn_symbolic_bitwuzla.cpp  types_temp.hpp  xnnpack_folders.csv
.claude/agents/: neon-simd-verifier.md  neon-to-rvv-converter.md  rvv-symbolic-encoder.md  simd-equivalence-verifier.md
depricated/: neon_impl.cpp  riscv_impl.cpp  symbolic_common.h
depricated/n_symbolic/: intrinsics.h  memory.h  neon_symbolic.h  types.h  utils.h
depricated/r_symbolic/: helpers.h  intrinsics.h  memory.h  riscv_symbolic.h  test_neon.cpp  types.h
example/: ex4-adidas.py  structs.py
kernels/: status.json
kernels/harness/: f32-argmaxpool.c  f32-conv-hwc2chw.c  f32-dwconv-minmax.c  f32-dwconv2d-chw.c  f32-f16-vcvt.c  f32-gemm-minmax.c  f32-igemm-minmax.c  f32-maxpool.c  f32-raddstoreexpminusmax.c  f32-spmm-minmax.c  f32-vadd.c  f32-vcmul.c  f32-vdiv.c  f32-vlrelu.c  f32-vmax.c  f32-vmin.c  f32-vmul.c  f32-vmulc.c  f32-vmulcaddc.c  f32-vmulcaddcfma.c  f32-vrndne.c  f32-vsqrt.c  f32-vsub.c  qd8-f32-qc4w-gemm-minmax.c  qs8-f32-vcvt.c  qs8-qc8w-gemm-minmax-fp32.c  qs8-rdsum.c  qs8-rsum.c  qs8-vadd-minmax.c  qs8-vaddc.c  qs8-vcvt.c  qs8-vlrelu.c  qs8-vmul-minmax-fp32.c  qu8-f32-vcvt.c  qu8-rdsum.c  qu8-rsum.c  qu8-vadd-minmax.c  s8-vclamp.c  u8-vclamp.c  x32-packw-gemm-goi.c  (+1 more)
kernels/source/: f32-argmaxpool.c  f32-conv-hwc2chw.c  f32-dwconv-minmax.c  f32-dwconv2d-chw.c  f32-f16-vcvt.c  f32-gemm-minmax.c  f32-igemm-minmax.c  f32-maxpool.c  f32-raddstoreexpminusmax.c  f32-spmm-minmax.c  f32-vadd.c  f32-vcmul.c  f32-vdiv.c  f32-vlrelu.c  f32-vmax.c  f32-vmin.c  f32-vmul.c  f32-vmulc.c  f32-vmulcaddc.c  f32-vmulcaddcfma.c  f32-vrndne.c  f32-vsqrt.c  f32-vsub.c  qd8-f32-qc4w-gemm-minmax.c  qd8-f32-qc8w-gemm-minmax.c  qd8-f32-qc8w-igemm-minmax.c  qs8-f32-vcvt.c  qs8-qc8w-gemm-minmax-fp32.c  qs8-rdsum.c  qs8-rsum.c  qs8-vadd-minmax.c  qs8-vadd.c  qs8-vaddc.c  qs8-vcvt.c  qs8-vlrelu.c  qs8-vmul-minmax-fp32.c  qu8-f32-vcvt.c  qu8-rdsum.c  qu8-rsum.c  qu8-vadd-minmax.c  (+4 more)
notes/: lean-model-alignment-audit.md  neon-to-lean-mapping.md
notes/demos/: existing-lean-examples.lean  f32-velu-fma-counterexample.c  qs8-vaddc-overflow.c
notes/memory/: DECISIONS.md  DISCUSSION_LOG.md  PLAN.md  PROJECT_STATE.md  README.md
op-semantics/: neon-intrinsics.md
prompts/: RVV_background_prompt.md  prompt.txt  zephyr_repair_prompt.txt
prompts/Neon/: compilation_repair.md  example_translation.md  execution_repair.md  prompt.md  source_background.md  translation_rules.md  verification_repair.md
prototype/neon2lean/: Neon2LeanDemo.lean  README.md  lake-manifest.json  lakefile.lean
src/: symbolic_common.hpp  symbolic_common_bitwuzla.hpp  symbolic_helpers.hpp  symbolic_scalar_types.hpp  xnn_minimal.h
src/neon_symbolic/: intrinsics.hpp  memory.hpp  types.hpp  utils.hpp
src/riscv_symbolic/: helpers.hpp  intrinsics.hpp  memory.hpp  riscv_symbolic.hpp  types.hpp
src/salty_rn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/verification/: salt.hpp  xnn_minimal.h
src/verification_bw/: CMakeLists.txt  salt.hpp  xnn_minimal.h
src/verification_bw/core/: comparison.hpp  context.hpp  fp_bf16.hpp  symbolic_buffer.hpp  symbolic_scalar.hpp  symbolic_vector.hpp
src/verification_bw/lean/: lake-manifest.json
src/verification_bw/lean/SALT/Kernel/QS8/: Params.lean
src/verification_bw/lean/SALT/Kernel/QS8VAdd/: RVV.lean
src/verification_bw/lean/SALT/Kernel/QS8VAddC/: Equivalence.lean  Neon.lean  RVV.lean
src/verification_bw/neon/: intrinsics.hpp
src/verification_bw/neon/ops/: aliases.hpp  arith_help.hpp  cmp.hpp  core.hpp  crypto.hpp  exotic.hpp  fp.hpp  fpcvt.hpp  int_elem.hpp  loadstore.hpp  misc.hpp  narrow.hpp  nhelp.hpp  permute.hpp  reinterpret.hpp  sat.hpp  shift.hpp  structural.hpp  tuple_permute.hpp  widen.hpp
src/verification_bw/rvv/: intrinsics.hpp
src/verification_bw/rvv/ops/: _all.hpp  carry.hpp  core.hpp  crypto.hpp  fixedpoint.hpp  init.hpp  int_arith.hpp  int_compare.hpp  int_macc.hpp  int_red.hpp  mask.hpp  mem_indexed.hpp  mem_seg.hpp  mem_segstr.hpp  mem_strided.hpp  mem_unit.hpp  narrowing.hpp  permutation.hpp  typemanip.hpp  vsetvl.hpp  widening.hpp
src/verification_cvc5/: CMakeLists.txt  salt.hpp
src/verification_cvc5/core/: bv_fold.hpp  comparison.hpp  context.hpp  fp_bf16.hpp  fp_convert.hpp  symbolic_buffer.hpp  symbolic_scalar.hpp  symbolic_vector.hpp
src/verification_cvc5/harness/: verify_f16_conv_hwc2chw_cvc5.cpp
src/verification_cvc5/neon/: intrinsics.hpp
src/verification_cvc5/neon/ops/: _all.hpp  aliases.hpp  arith_help.hpp  cmp.hpp  core.hpp  crypto.hpp  exotic.hpp  fp.hpp  fpcvt.hpp  int_elem.hpp  loadstore.hpp  misc.hpp  narrow.hpp  nhelp.hpp  permute.hpp  reinterpret.hpp  sat.hpp  shift.hpp  structural.hpp  tuple_permute.hpp  widen.hpp
src/verification_cvc5/rvv/: intrinsics.hpp
src/verification_cvc5/rvv/ops/: _all.hpp  carry.hpp  core.hpp  crypto.hpp  fixedpoint.hpp  fp_arith.hpp  fp_compare.hpp  fp_cvt.hpp  fp_fma.hpp  fp_red.hpp  fp_slide.hpp  fp_special.hpp  fp_widening.hpp  init.hpp  int_arith.hpp  int_compare.hpp  int_macc.hpp  int_red.hpp  mask.hpp  mem_indexed.hpp  mem_seg.hpp  mem_segstr.hpp  mem_strided.hpp  mem_unit.hpp  narrowing.hpp  permutation.hpp  typemanip.hpp  vsetvl.hpp  widening.hpp
src/workflow/: agents.py  config.py  intrinsics_search.py  intrinsics_tools.py  llm_client.py  pipeline.py  status.py
tests/: XNN_1_rvv.cpp  rsum_neon.cpp  test_riscv.cpp
tests/Neon/: f16-conv-hwc2chw_neon.cpp  f16-dwconv2d-chw_neon.cpp  f16-dwconv_neon.cpp  f16-f32-vcvt_neon.cpp  f16-f32acc-rdsum_neon.cpp  f16-f32acc-rsum_neon.cpp  f16-ibilinear-chw_neon.cpp  f16-ibilinear_neon.cpp  f16-igemm_neon.cpp  f16-qs8-vcvt_neon.cpp  f16-raddstoreexpminusmax_neon.cpp  f16-rminmax_neon.cpp  f16-rsum_neon.cpp  f16-spmm_neon.cpp  f16-vbinary_neon.cpp  f16-vclamp_neon.cpp  f16-vcmul_neon.cpp  (+61 more)
verifier/: symbolic_scalar_types.hpp
(+238 files in other folders)
